tests/org.eclipse.php.core.tests/workspace/errors/php54/invalidAbstractMethod.pdtt
--TEST--
Bug 480280 - No error for non-abstract method with no body
--FILE--
<?php 
trait Trait1 {
    /* no error check will be done here */
    function foo1();

    /* no error check will be done here */
    abstract function foo1();

    abstract function foo1() {
    	$a = 0;
    }
}

class MyClass1 {
    use Trait1;

    function foo1();

    abstract function foo1();

    abstract function foo1() {
    	$a = 0;
    }
}

abstract class MyClass2 {
    use Trait1;

    function foo1();

    abstract function foo1() {
    	$a = 0;
    }
}
?>
--EXPECT--
[line=12, start=165, end=210] abstract method cannot contain body
[line=19, start=267, end=268] non-abstract method must contain body
[line=21, start=298, end=299] non-abstract class cannot have abstract methods
[line=24, start=305, end=350] abstract method cannot contain body
[line=31, start=416, end=417] non-abstract method must contain body
[line=34, start=423, end=468] abstract method cannot contain body
